`canvas`, `img` and `video` elements are inlined by default and they have overflowing issue:
Change "display" property from "inline" to "block" in order them to act as block.

Set "max-width: 100%" in order them to not overflow and at maximum they will get the containers "width".

--- a/reset.css
+++ b/reset.css
@@ -47,3 +47,12 @@ hr {
   /* Fix color inhering on Firefox */
   color: inherit;
 }
+
+canvas,
+img,
+video {
+  /* Change display type from "inline" to "block" */
+  display: block;
+  /* Set "max-width: 100%" to get rid of overflow issues */
+  max-width: 100%;
+}
